--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="start">Start</string>
     <string name="important_promises">The most important promises are the ones we make to ourselves.</string>
     <string name="agreeTo">"I agree to take the first steps to "</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
